# Machine-Learning-in-Web-Optimization-with-CmdStanPy

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
chapter2/: chapter2.ipynb  model.stan  model_2.stan  model_3.stan  model_4.stan  model_b.stan
chapter3/: chapter3.ipynb  model.stan  model_comb.stan
work-dir/chapter2/: chapter2.ipynb  model.stan  model_2.stan  model_a.stan
work-dir/chapter3/: chapter3.ipynb  model_comb.stan  model_int.stan
work-dir/chapter4/: chapter4.ipynb
work-dir/chapter5/: chapter5.ipynb
