[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Takato Ueno"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
cmdstanpy = {extras = ["all"], version = "^1.1.0"}
arviz = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
